--- a/index.Rmd
+++ b/index.Rmd
@@ -2,12 +2,17 @@
 title: "purrr tutorial"
 ---
 
+<img src="https://www.stickermule.com/marketplace/embed_img/13594" style="max-width:100%;">
+
+*DISCLAIMER: ROUGH AND INCOMPLETE!*
+
 The purrr package:
 
   * On CRAN: <https://cran.r-project.org/web/packages/purrr/index.html>
   * Development on GitHub: <https://github.com/hadley/purrr> 
 
-Tutorial initially created for [2016-08-12 meeting](https://github.com/minisciencegirl/studyGroup/issues/131) of the Vancouver R Study Group.  
+Tutorial development started for [2016-08-12 meeting](https://github.com/minisciencegirl/studyGroup/issues/131) of the Vancouver R Study Group.  
+
 Some version will eventually appear as part of:
 
   * [STAT 545](http://stat545.com) Exploratory Data Analysis
