--- a/ex10_trump-tweets.Rmd
+++ b/ex10_trump-tweets.Rmd
@@ -112,7 +112,7 @@ substring(text, first, last)
 
 ARGUMENTS:
 text = character
-first = integer, position where substring to extract start
+first = integer, position where substring to extract starts
 last = integer, position where substring to extract stops
 ```
 
