--- a/ex03_github-api-json.Rmd
+++ b/ex03_github-api-json.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Simplifying data from a list from GitHub API"
+comment: "*suitable for a hands-on activity*"
 ---
 
 ```{r, echo = FALSE}
